<resources>
    <string name="app_name">Savour It</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string-array name="cuisine_array">
        <item>All Cuisines</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Mexican</item>
        <item>French</item></string-array>
    <string name="image">Image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="nav_home">Home</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_dark_mode">Dark Mode</string>
    <string name="enable_auto_update">Enable Auto-Update</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="enter_friend_username">Enter friend\'s username</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Settings</string>
    <string name="title_chat">Chat</string>
    <string name="selected_budget">Selected: %1$s</string>
    <string-array name="budget_array">
        <item>No Budget</item>
        <item>€1-€10</item>
        <item>€10-€20</item>
        <item>€20-€30</item>
    </string-array>
    <string name="filter_icon">Filter Icon</string>
    <string name="chat_with">Chat with %s</string>
    <string name="error_invalid_user">Invalid user. Please try again.</string>
    <string name="error_sending_message">Failed to send message. Try again.</string>
    <string name="do_not_have_account">Don\'t have an account yet? Signup" "</string>
    <string name="password">Password</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="welcome_to_savour_it_v_0_0_1">Welcome to Savour-It - V 0.0.1</string>
    <string name="rating_format">Rating: %1$.1f</string>
    <string name="chat_message_format">%1$s: %2$s</string>
    <string name="change_language">Change Language</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Polski</item>
        <item>Español</item>
>>>>>>> de17844 (Profile linking)
    </string-array>
</resources>

