<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <!-- RecyclerView to display friends list -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFriends"
      android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edtFriendUsername"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/dark_orange"
        android:text="@string/log_out_button" />

    <EditText
        android:id="@+id/edtFriendUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_friend_username"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toTopOf="@id/btnAddFriend"
        app:layout_constraintTop_toBottomOf="@id/recyclerFriends"
        />

    <!-- Button to add a new friend -->
    <Button
        android:id="@+id/btnAddFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtFriendUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/dark_orange"
        app:layout_constraintVertical_bias="1"
        android:text="@string/add_friend" />
</androidx.constraintlayout.widget.ConstraintLayout>
