<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.savourit.feature.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".feature.auth.login.LoginActivity">

        <!-- Curved Background -->
        <ImageView
            android:id="@+id/curved_top"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/top_background_shape"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Login Title -->
        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="200dp" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in_to_continue"
            android:textSize="14sp"
            android:textColor="@color/lavender"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:hintEnabled="true"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextInputHintTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_subtitle"
            android:layout_marginHorizontal="32dp"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/TextInputEditText"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email_error"
                style="@style/TextInputErrorTextAppearance" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:hintEnabled="true"
            app:boxStrokeWidth="0dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextInputHintTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout"
            android:layout_marginHorizontal="32dp"
            app:startIconDrawable="@drawable/ic_pass"
            app:passwordToggleTint="@color/colorHintTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextInputEditText"
                android:background="@null"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password_error"
                style="@style/TextInputErrorTextAppearance" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/passwordRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textSize="14sp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="42dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
             />

        <!-- Login Button -->
        <LinearLayout
            android:id="@+id/login_button_container"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/gradient_button"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/passwordRedirectText"

            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true">

            <!-- Login Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

            <!-- Arrow Icon -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_fwd"
                android:layout_marginStart="10dp"
                app:tint="@color/white" />

        </LinearLayout>

        <!-- Sign Up Redirect -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_do_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/do_not_have_account"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
